--- a/styles/base.css
+++ b/styles/base.css
@@ -14,13 +14,29 @@
 .side-bar {
   width: 30%;
   display: flex;
-  gap: 50px;
+  gap: 40px;
   flex-direction: column;
   border: 2px solid black;
 }
 .middle-box {
   height: 10vh;
   border-bottom: 2px solid black;
+}
+
+.four-box {
+  width: 100%;
+  display: flex;
+  gap: 15px;
+  flex-direction: column;
+}
+.odd-box {
+  width: 80%;
+}
+.small-box {
+  height: 3vh;
+}
+.gray-box {
+  background: gray;
 }
 
 .main {
